------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

July 13 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Makefile corrections (couple of missing files)
	* Moved Polymorph command in cpp to only wizard mode compiles..
	
July 8 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Minor correction to fountains...
	
July 8 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Added wizard mode command Polymorph (key '[')

July 8 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Changed license notices a bit

July 8 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* levitating plants and mushrooms move about
	
July 7 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Vomit messages work...

July 7 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* "You look down. You see an active mine." in the dark. no more...
	* Headless zombies can no longer vomit.
	* ?,*,|,<,>,/,\,: are no longer acceptable for names (windows doesn't like them)
	* ForcedVomit messages are different for mommos and dolphins
	* 'If player tries to apply when he has no arms, the message says that there are no items to apply.' bug corrected.. 
	* When you don't get to the highscore list your reason of death is shown
	
July 7 2004 Heikki Sairanen <firstname.lastname@tut.fi>

	* Copyright notices added to sources, headers and script
	
Heikki Sairanen <firstname.lastname@tut.fi>

	* fountain test removed. sorry
	
Heikki Sairanen <firstname.lastname@tut.fi>

	* Fountains can now throw player to other fountains in near levels or same level.
	
Heikki Sairanen <firstname.lastname@tut.fi>

	* Leprosy improved a lot and is cureable
	
Heikki Sairanen <firstname.lastname@tut.fi>
