@@ -79,6 +79,7 @@ class room
   virtual bool AllowAltarPolymorph() const { return true; }
   virtual bool AllowFoodSearch() const { return true; }
   virtual void ReceiveVomit(character*) { }
+  virtual bool IsOKToDestroyWalls(const character*) const;
  protected:
   virtual void VirtualConstructor(bool) { }
   mutable character* Master;
