@@ -6,6 +6,10 @@ This file contains SPOILERS, which might ruin your IVAN experience totally. The 
 is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
+July 14 2004 Heikki Sairanen <firstname.lastname@tut.fi>
+
+	* Vladimir works better, but far from perfect
+	
 
 July 13 2004 Heikki Sairanen <firstname.lastname@tut.fi>
 
